--- a/views/index.pug
+++ b/views/index.pug
@@ -1,28 +1,27 @@
 doctype html
 head
 	title BetterCrewLink Server
-	link(rel="icon", href="https://github.com/ottomated/CrewLink/raw/master/logo.png", type="image/x-icon")
+	link(rel="icon", href="https://github.com/OhMyGuus/BetterCrewLink/raw/nightly/src/renderer/logos/BCL-AppIcon.png", type="image/x-icon")
 	meta(property='og:title' content='BetterCrewLink Server')
 	meta(property='og:description' content='Voice server for Among Us proximity voice chat')
-	meta(property='og:image' content='https://github.com/ottomated/CrewLink/raw/master/logo.png')
+	meta(property='og:image' content='https://github.com/OhMyGuus/CrewLink/raw/master/logo.png')
 	link(rel='stylesheet', href='/public/styles.css')
 
 
-img(src="https://github.com/ottomated/CrewLink/raw/master/logo.png")
+img(src="https://github.com/OhMyGuus/BetterCrewLink/raw/nightly/src/renderer/logos/BCL-Logo-shadow.png")
 h1 BetterCrewlink Server
 #crewinfo
 
 	p This is a BetterCrewLink Server running on: 
 	br
 	b #{address}
-	p There #{connectionCount === 1 ? 'is' : 'are'} currently #{connectionCount} connected user#{connectionCount === 1 ? '' : 's'}.
+	p There #{connectionCount === 1 ? 'is' : 'are'} currently #{connectionCount} connected user#{connectionCount === 1 ? '' : 's'} 
 	<hr>
 	p
 		a(href="https://github.com/OhMyGuus/BetterCrewLink/releases/latest", target="_blank")
-			| To download BetterCrewLink for better audio support & new features
+			| To download BetterCrewLink
 			| <b>Click here</b>
 	<hr>
-	p Note: (This server also works for the offical CrewLink)
 	 
 		
 #background-container
