New icon for BetterCrewLink server (pog)

--- a/views/index.pug
+++ b/views/index.pug
@@ -4,12 +4,12 @@ head
 	link(rel="icon", href="https://github.com/OhMyGuus/BetterCrewLink/raw/nightly/src/renderer/logos/BCL-AppIcon.png", type="image/x-icon")
 	meta(property='og:title' content='BetterCrewLink Server')
 	meta(property='og:description' content='Voice server for Among Us proximity voice chat')
-	meta(property='og:image' content='https://github.com/OhMyGuus/CrewLink/raw/master/logo.png')
+	meta(property='og:image' content='https://github.com/OhMyGuus/BetterCrewLink/raw/nightly/src/renderer/logos/BCL-AppIcon.png')
 	link(rel='stylesheet', href='/public/styles.css')
 
 
-img(src="https://github.com/OhMyGuus/BetterCrewLink/raw/nightly/src/renderer/logos/BCL-Logo-shadow.png")
-h1 BetterCrewlink Server
+img(src="https://github.com/OhMyGuus/BetterCrewLink/raw/nightly/src/renderer/logos/sizes/256-BCL-Logo-shadow.png")
+h1 BetterCrewLink Server
 #crewinfo
 
 	p This is a BetterCrewLink Server running on: 
