--- a/views/index.pug
+++ b/views/index.pug
@@ -3,7 +3,7 @@ head
 	title BetterCrewLink Server
 	link(rel="icon", href="https://github.com/OhMyGuus/BetterCrewLink/raw/nightly/src/renderer/logos/BCL-AppIcon.png", type="image/x-icon")
 	meta(property='og:title' content='BetterCrewLink Server')
-	meta(property='og:description' content='Voice server for Among Us proximity voice chat')
+	meta(property='og:description' content='Voice server for Among Us proximity voice chat mod called BetterCrewLink')
 	meta(property='og:image' content='https://github.com/OhMyGuus/BetterCrewLink/raw/nightly/src/renderer/logos/BCL-AppIcon.png')
 	link(rel='stylesheet', href='/public/styles.css')
 
@@ -12,7 +12,7 @@ img(src="https://github.com/OhMyGuus/BetterCrewLink/raw/nightly/src/renderer/log
 h1 BetterCrewLink Server
 #crewinfo
 
-	p This is a BetterCrewLink Server running on: 
+	p This is a BetterCrewLink Server running on:
 	br
 	b #{address}
 	p There #{connectionCount === 1 ? 'is' : 'are'} currently #{connectionCount} connected user#{connectionCount === 1 ? '' : 's'} 
